[package]
name = "ukebox"
version = "0.5.0"
authors = ["Anett Seeker"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A ukulele chord finder in Rust"
readme = "README.md"
homepage = "https://github.com/noeddl/ukebox"
repository = "https://github.com/noeddl/ukebox"
keywords = ["ukulele", "chords", "music"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0"
indoc = "0.3"
predicates = "1"
rstest = "0.6"
