[package]
name = "ukebox"
version = "0.8.0"
authors = ["Anett Seeker"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A ukulele chord finder in Rust"
readme = "README.md"
homepage = "https://github.com/noeddl/ukebox"
repository = "https://github.com/noeddl/ukebox"
keywords = ["ukulele", "chords", "music", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
petgraph = "0.6"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0"
indoc = "1.0"
predicates = "2"
rstest = "0.10"
