[package]
name = "ukebox"
version = "0.9.2"
authors = ["Anett Seeker"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A ukulele chord toolbox in Rust"
readme = "README.md"
homepage = "https://github.com/noeddl/ukebox"
repository = "https://github.com/noeddl/ukebox"
keywords = ["ukulele", "chords", "music", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5", features = ["derive"] }
itertools = "0.13"
lazy_static = "1.5"
petgraph = "0.6"
thiserror = "1.0.61"

[dev-dependencies]
assert_cmd = "2.0"
indoc = "2.0"
predicates = "3.1"
rstest = "0.21"
